--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "mongoose": "^5.4.4"
+    "mongoose": "^5.4.4",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "morgan": "^1.9.1",
