--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.4",
     "multer": "^1.4.1"
